# 3-key

./: .clang-format  .dockerignore  .gitignore  CNAME  README.md  build.py  mkdocs.yml  openocd.cfg  requirements.txt  run_docker.py
.github/workflows/: build.yml  codeql.yml  format.yml  pages.yml  unittests.yml
docker/: Dockerfile
docs/: adding_features.md  development.md  features.md  hardware.md  index.md
docs/features/: ctrl_c_v.md  time_tracker.md
docs/hardware/: board.md  buttons.md
docs/terminal/: binary_mode.md  text_mode.md
firmware/: 3-key.cpp  CMakeLists.txt  config.hpp
firmware/buttons/: CMakeLists.txt  buttons.cpp
firmware/buttons/include/: buttons.hpp  buttons_config.hpp  buttons_interrupt.hpp
firmware/features/: CMakeLists.txt  features_handler.cpp
firmware/features/ctrl_c_v/: CMakeLists.txt  ctrl_c_v.cpp
firmware/features/ctrl_c_v/include/: ctrl_c_v.hpp
firmware/features/features_handler/: CMakeLists.txt  features_handler.cpp
firmware/features/features_handler/include/: features.hpp  features_handler.hpp  features_handler_types.hpp
firmware/features/include/: features_handler.hpp
firmware/features/time_tracker/: CMakeLists.txt  time_tracker.cpp
firmware/features/time_tracker/include/: time_tracker.hpp  time_tracker_types.hpp
firmware/flash/: CMakeLists.txt  flash.cpp
firmware/flash/include/: flash.hpp  flash_config.hpp
firmware/inc/: config.hpp  keys.hpp  leds.hpp  usb_descriptors.h
firmware/keyscfg/: CMakeLists.txt
firmware/keyscfg/include/: keys_config.hpp
firmware/leds/: CMakeLists.txt  leds.cpp
firmware/leds/include/: leds.hpp  leds_config.hpp  ws2812.pio
firmware/src/: keys.cpp  leds.cpp  main.cpp  usb_descriptors.cpp
firmware/storage/: CMakeLists.txt  storage.cpp
firmware/storage/include/: storage.hpp  storage_config.hpp
firmware/terminal/: CMakeLists.txt  binary_mode.cpp  terminal.cpp  text_mode.cpp
firmware/terminal/include/: binary_mode.hpp  terminal.hpp  text_mode.hpp
firmware/terminal/test/: CMakeLists.txt  terminal_binary_mode_test.cpp
firmware/time/: CMakeLists.txt  time.cpp
firmware/time-tracker/: CMakeLists.txt  time_tracker.cpp
firmware/time-tracker/include/: time_tracker.hpp
firmware/time/include/: time.hpp
firmware/time/mock/: mock_time.hpp
firmware/time/test/: CMakeLists.txt  time_test.cpp
firmware/usb/: CMakeLists.txt  cdc.cpp  hid.cpp  tud.cpp  usb_descriptors.cpp
firmware/usb/include/: cdc.hpp  hid.hpp  tud.hpp
tests/: CMakeLists.txt
tools/: connect_serial.py  format.sh  time_report.py  time_tracker_report.py  utils.py
